packages/typ/tests/fixtures/diagnostics/0778_polyvar_conditional_payload_mismatch_02.ml.expected
File "0778_polyvar_conditional_payload_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0778_polyvar_conditional_payload_mismatch_02 is not a valid module name.

File "0778_polyvar_conditional_payload_mismatch_02.ml", line 5, characters 4-30:
5 |     (`A true : [ `A of bool ])
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type [ `A of bool ]
       but an expression was expected of type [ `A of int ]
       Types for tag `A are incompatible
