packages/typ/tests/fixtures/diagnostics/0778_polyvar_conditional_payload_mismatch_02.ml
let _ =
  if false then
    (`A 1 : [ `A of int ])
  else
    (`A true : [ `A of bool ])
